# simple-pg-vm-agent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
envs/: local.env
src/: app.py  errors.py  main.py  models.py  settings.py  task_queue.py  utils.py  worker.py
src/api/: dependencies.py  routes.py  schemas.py
src/domain/: enums.py  models.py  postgres.py  utils.py
