[project]
name = "simple-pg-vm-agent"
version = "0.0.1"
description = "Реализация простейшего PostgreSQL VM агента как части DBaaS сервиса (в учебных целях)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]
