[project]
name = "simple-pg-vm-agent"
version = "0.0.1"
description = "Реализация простейшего PostgreSQL VM агента как части DBaaS сервиса (в учебных целях)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.25.0",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.15.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]


[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]


[tool.ruff.lint]
fixable = ["I"]  # fix only `isort`
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D203", # One blank line before class (ignored by D211)
    "D212", # Multi line summary first line (ignored by D213)
    "G004", # Logging statement uses f-string
    "COM812", # Missing trailing comma (skip it because it conflicts with `ruff format`)
    "TD002", # Missing T0D0 author
    "TD003", # Missing T0D0 link
    "FIX002", #  Line contains T0D0, consider resolving the issue
]


[tool.mypy]
strict = true
